# cmod

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lua.yml  python-asyncio.yml  python.yml  rust.yml  wasm.yml
cmod/: Cargo.toml
cmod-core/: Cargo.toml
cmod-core/src/: lib.rs
cmod-core/src/ffi/: mod.rs
cmod-core/src/ffi/lua/: mod.rs  serde.rs
cmod-core/src/ffi/py/: mod.rs  serde.rs
cmod-core/src/ffi/wasm/: mod.rs  serde.rs
cmod-macros/: Cargo.toml
cmod-macros/src/: lib.rs
cmod-macros/src/backend/: mod.rs
cmod-macros/src/backend/class/: mod.rs
cmod-macros/src/backend/class/py/: mod.rs
cmod-macros/src/backend/entry/: mod.rs
cmod-macros/src/backend/entry/py/: mod.rs
cmod-macros/src/backend/function/: mod.rs
cmod-macros/src/backend/function/py/: mod.rs
cmod-macros/src/backend/lua/: class.rs  entry.rs  function.rs  methods.rs  mod.rs  module.rs  utils.rs
cmod-macros/src/backend/module/: mod.rs
cmod-macros/src/backend/module/py/: mod.rs
cmod-macros/src/backend/none/: entry.rs  function.rs  methods.rs
cmod-macros/src/backend/py/: class.rs  entry.rs  function.rs  methods.rs  mod.rs  module.rs  utils.rs
cmod-macros/src/backend/utils/: py.rs
cmod-macros/src/backend/wasm/: class.rs  entry.rs  function.rs  methods.rs  module.rs  utils.rs
cmod/src/: lib.rs
example/: Cargo.toml  Makefile.toml  example_py.rs  mainpy.rs  wasm.rs
example/examples/: base.rs  base_lua.rs  base_py.rs  base_wasm.rs
example/src/: lib.rs  main.rs
example/tests/: hello_py.py
