[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["development-tools::ffi"]
description = "cmod-core"
edition = "2018"
license-file = "LICENSE"
name = "cmod-core"
repository = "https://github.com/rise0chen/cmod.git"
version = "0.1.3"

[features]
default = []
ffi_lua = ["mlua"]
ffi_py = ["pyo3", "pyo3-asyncio", "pythonize", "tokio"]
ffi_py_asyncio = ["ffi_py"]
ffi_wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
mlua = {version = "0.8", features = ["send", "async", "serialize", "module"], optional = true}
pyo3 = {version = "0.18", features = ["serde", "extension-module"], optional = true}
pyo3-asyncio = {version = "0.18", features = ["tokio-runtime"], optional = true}
pythonize = {version = "0.18", optional = true}
serde = {version = "1", features = ["derive"]}
serde-wasm-bindgen = {version = "0.5", optional = true}
tokio = {version = "1", optional = true}
wasm-bindgen = {version = "0.2", optional = true}
