[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "cmod-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
ffi_lua = ["mlua"]
ffi_py = ["pyo3", "pyo3-asyncio", "pythonize", "tokio"]
ffi_py_asyncio = ["ffi_py"]
ffi_wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
mlua = {version = "0.9", features = ["send", "async", "serialize", "module"], optional = true}
pyo3 = {version = "0.20", features = ["serde", "extension-module"], optional = true}
pyo3-asyncio = {version = "0.20", features = ["tokio-runtime"], optional = true}
pythonize = {version = "0.20", optional = true}
serde = {version = "1", features = ["derive"]}
serde-wasm-bindgen = {version = "0.6", optional = true}
tokio = {version = "1", optional = true}
wasm-bindgen = {version = "0.2", optional = true}
