[package]
authors = ["rise0chen <rise0chen@163.com>"]
categories = ["development-tools::ffi"]
description = "Build a cross-language module with Rust FFI"
edition = "2018"
license-file = "LICENSE"
name = "cmod"
repository = "https://github.com/rise0chen/cmod.git"
version = "0.1.3"

[features]
default = []
ffi_lua = ["cmod-macros/ffi_lua", "cmod-core/ffi_lua"]
ffi_py = ["cmod-macros/ffi_py", "cmod-core/ffi_py"]
ffi_py_asyncio = ["cmod-macros/ffi_py_asyncio", "cmod-core/ffi_py_asyncio"]
ffi_wasm = ["cmod-macros/ffi_wasm", "cmod-core/ffi_wasm"]

[dependencies]
cmod-core = {version = "0", path = "../cmod-core"}
cmod-macros = {version = "0", path = "../cmod-macros"}
