[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "cmod"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
ffi_lua = ["cmod-macros/ffi_lua", "cmod-core/ffi_lua"]
ffi_py = ["cmod-macros/ffi_py", "cmod-core/ffi_py"]
ffi_py_asyncio = ["cmod-macros/ffi_py_asyncio", "cmod-core/ffi_py_asyncio"]
ffi_wasm = ["cmod-macros/ffi_wasm", "cmod-core/ffi_wasm"]
module = ["cmod-macros/module", "cmod-core/module"]

[dependencies]
cmod-core = {workspace = true}
cmod-macros = {workspace = true}
