[package]
authors = ["rise0chen <rise0chen@163.com>"]
edition = "2018"
name = "hello"
repository = "https://github.com/rise0chen/cmod.git"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]
name = "hello"

[features]
default = ["ffi_lua", "module"]
ffi_lua = ["cmod/ffi_lua", "mlua"]
ffi_py = ["cmod/ffi_py", "pyo3"]
ffi_py_asyncio = ["cmod/ffi_py_asyncio", "pyo3"]
ffi_wasm = ["cmod/ffi_wasm", "wasm-bindgen", "wasm-bindgen-futures"]
module = ["cmod/module", "mlua/module"]

[dependencies]
cmod = {workspace = true}
mlua = {version = "0.10", features = ["lua54"], optional = true}
pyo3 = {version = "0.20", features = ["abi3-py37"], optional = true}
serde = {version = "1", features = ["derive"]}
wasm-bindgen = {version = "0.2", optional = true}
wasm-bindgen-futures = {version = "0.4", optional = true}
